set the max-width of the input button for images from the add a book form to 100% to avoid overflow

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -150,12 +150,9 @@ a {
     bottom: 0;
 }
 
-#edit-book-form {
+input {
     max-width: 100%;
 }
-
-
-
 
 /* Media Screens */
 
